<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_menu"
        android:textColor="#000000"
        android:textSize="25sp" />


        <TextView
            android:id="@+id/tvNameDs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:text=""
            android:textSize="15sp" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/b_logout"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/btn_sess"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_green"
        android:text="@string/b_session"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_historial"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_green"
        android:text="@string/b_history"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/btn_editprof"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_green"
        android:text="@string/b_editprof"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/btn_out"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_red"
        android:text="@string/b_logout"
        android:textSize="18sp"/>

</LinearLayout>