<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".views.EditActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/editar_perfil"
        android:textColor="#000000"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/i_descLogo"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="Usuario:"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_username"
            android:textAlignment="inherit"
            android:textSize="20sp"
            android:autofillHints="no" tools:targetApi="o" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Nombre:"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_name"
        android:inputType="text"
        android:autofillHints="no" tools:targetApi="o"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Apellido:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etSurnameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_lastName"
            android:inputType="text"
            android:autofillHints="" tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Contraseña:"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etPassword"
            android:inputType="text"
            android:autofillHints="" tools:targetApi="o"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnEditUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_green"
        android:text="@string/b_editar"
        android:textColor="#ffffff"
        android:textSize="20sp"/>

    <ProgressBar
        android:id="@+id/progressEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal" />

</LinearLayout>