<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Dashboard"
    android:background="@drawable/background3">

    <TextView
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/app_menu"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bienvenido: "
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvNameDs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text=""
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="372dp"
        android:layout_height="300dp"
        android:layout_gravity="center" />
    //android:src="@drawable/pelotita"

    <Button
        android:id="@+id/btn_sess"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/b_session"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_historial"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/b_history"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_out"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/b_logout"
        android:textSize="18sp" />

</LinearLayout>