<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    tools:context=".OpenSession">

    <com.usher.usher.views.SessionView
        android:layout_width="match_parent"
        android:layout_height="450dp" />

    <Button
        android:id="@+id/btn_Quorum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/b_quorum"
        android:textColor="#000000"
        android:textSize="30sp" />

    <ProgressBar
        android:id="@+id/progressSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginEnd="86dp"
            android:layout_marginRight="86dp"
            android:layout_toStartOf="@+id/btn_pres"
            android:layout_toLeftOf="@+id/btn_pres"
            android:text="@string/tv_present"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_pres"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="65dp"
            android:layout_marginRight="65dp"
            android:background="@drawable/btn_green"
            android:text=""
            android:textColor="#000000"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginEnd="86dp"
            android:layout_marginRight="86dp"
            android:layout_toStartOf="@+id/btn_aus"
            android:layout_toLeftOf="@+id/btn_aus"
            android:text="@string/tv_missing"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_aus"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="65dp"
            android:layout_marginRight="65dp"
            android:background="@drawable/btn_red"
            android:text=""
            android:textColor="#000000"
            android:textSize="25sp" />
    </RelativeLayout>

</LinearLayout>